# SISSIz

./: .gitignore  AUTHORS  COPYING  INSTALL  Makefile.am  README  TODO  configure.ac
examples/: Makefile.am  genomic.maf  rRNA.aln
librna/: fold.c
phyml/: eigen.c  free.c  models.c  models.h  utilities.c
sissiz/: Makefile.am  dkiss.c  dkiss.h  evolve.c  evolve.h  global.c  global.h  models.c  models.h  mutate.c  mutate.h  tree.h  treefile.c  treefile.h
src/: Makefile.am  SISSIz.c  bionj_custom.c  bionj_custom.h  cmdline_sissiz.c  cmdline_sissiz.ggo  cmdline_sissiz.h  expfit.c  expfit.h  rnaz_utils.c  rnaz_utils.h  sissiz.h  treeML.c  treeML.h
